--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,16 +13,16 @@ jobs:
 
       - name: Install Hurl
         run: |
-          sudo apt-get update
-          curl -fsSL https://apt.akeeba.com/akeeba-apt.gpg | sudo tee /etc/apt/trusted.gpg.d/akeeba.asc >/dev/null
-          echo "deb [signed-by=/etc/apt/trusted.gpg.d/akeeba.asc] https://apt.akeeba.com stable main" | sudo tee /etc/apt/sources.list.d/akeeba.list
-          sudo apt-get update && sudo apt-get install -y hurl
+          HURL_VERSION=$(curl -s https://api.github.com/repos/Orange-OpenSource/hurl/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')
+          curl -LO "https://github.com/Orange-OpenSource/hurl/releases/download/${HURL_VERSION}/hurl_${HURL_VERSION}_linux_x86_64.deb"
+          sudo dpkg -i "hurl_${HURL_VERSION}_linux_x86_64.deb"
+          rm "hurl_${HURL_VERSION}_linux_x86_64.deb"
 
       - name: Run Tests
         run: |
           hurl --variables-file .\vars.env --test .\tests hurl-report
 
-      - name: Upload HTML Report as Artifact
+      - name: Upload HTML Report
         uses: actions/upload-artifact@v4
         with:
           name: hurl-html-report
