--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,10 +13,8 @@ jobs:
 
       - name: Install Hurl
         run: |
-          HURL_VERSION=$(curl -s https://api.github.com/repos/Orange-OpenSource/hurl/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')
-          curl -LO "https://github.com/Orange-OpenSource/hurl/releases/download/${HURL_VERSION}/hurl_${HURL_VERSION}_linux_x86_64.deb"
-          sudo dpkg -i "hurl_${HURL_VERSION}_linux_x86_64.deb"
-          rm "hurl_${HURL_VERSION}_linux_x86_64.deb"
+          /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          brew install hurl
 
       - name: Run Tests
         run: |
