--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,10 +14,7 @@ jobs:
       - name: Install Hurl
         run: |
           docker run --rm -v $(pwd):/tests ghcr.io/orange-opensource/hurl:6.0.0 \
-
-      - name: Run Tests
-        run: |
-          hurl --variables-file .\vars.env --test .\tests hurl-report
+          /usr/local/bin/hurl --variables-file /tests/vars.env --test /tests/tests --report-html /tests/hurl-report
 
       - name: Upload HTML Report
         uses: actions/upload-artifact@v4
