--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
         run: docker build -t my-hurl-runner .
 
       - name: Run Hurl Tests Inside Docker
-        run: docker run --rm -v $(pwd):/tests my-hurl-runner ls -la /tests
+        run: docker run --rm -v $(pwd):/tests my-hurl-runner
 
       - name: Upload HTML Report
         uses: actions/upload-artifact@v4
