--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,5 +21,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: hurl-html-report
-          path: hurl-report
+          path: reports
           retention-days: 7
